syntax = "proto3";

package scale;

message RemoteId {
  string id = 1;
}

message UpdateReq {
}

message RemoteQuery {
  string id = 1;
}

message RemoteNode {
  string id = 1;
  string addr = 2;
}

message RpcOkay {
}

message IdReply {
  string id = 1;
}

service Scale {
  rpc GetSuccessorId (RemoteId) returns (IdReply) {}
  rpc SetPredecessorId (UpdateReq) returns (RpcOkay) {}
  rpc SetSuccessorId (UpdateReq) returns (RpcOkay) {}
  rpc FindSuccessor (RemoteQuery) returns (IdReply) {}
  rpc Notify (RemoteNode) returns (RpcOkay) {}
  rpc ClosestPrecedingFinger (RemoteQuery) returns (IdReply) {}
}
