syntax = "proto3";

package trace;

message Success{}

message TraceMessage{
  repeated string trace = 1;
}

message TraceQuery{
  string traceID = 1;
}

message AppendTraceRequest{
  string traceID = 1;
  string addr = 2;
}

message StartTraceRequest{
  string traceID = 1;
}

service Trace {
  rpc StartTrace(StartTraceRequest) returns (Success) {}
  rpc GetTrace(TraceQuery) returns (TraceMessage) {}
  rpc AppendTrace(AppendTraceRequest) returns (Success) {}
}